fixed some bugs in gizmo_tutorial

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -500,9 +500,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# in utilities.simulation.Snapshot():\n",
+      "  read snapshot_times.txt\n",
+      "  input redshift = 0.000 -> snapshot index = 600\n",
+      "  reading snapshot index = 600, redshift = 0.000\n",
+      "\n",
+      "# in gizmo_analysis.gizmo_io.Read():\n",
+      "* read header from: output/snapdir_600/snapshot_600.0.hdf5\n",
+      "  snapshot contains the following number of particles:\n",
+      "  dark      (id = 1): 70514272 particles\n",
+      "  dark.2    (id = 2): 5513331 particles\n",
+      "  gas       (id = 0): 57060074 particles\n",
+      "  star      (id = 4): 13976485 particles\n",
+      "  blackhole (id = 5): 0 particles\n",
+      "\n",
+      "* read particles\n",
+      "  from: snapshot_600.0.hdf5\n",
+      "  from: snapshot_600.1.hdf5\n",
+      "  from: snapshot_600.2.hdf5\n",
+      "  from: snapshot_600.3.hdf5\n",
+      "\n",
+      "* read cosmological parameters from: initial_condition/ic_agora_m12i.conf\n",
+      "\n",
+      "* checking sanity of particle properties\n",
+      "\n",
+      "* assigning center of galaxy/halo:\n",
+      "  position = (41792.125, 44131.215, 46267.672) [kpc comoving]\n",
+      "  velocity = (-52.5, 71.9, 95.2) [km / s]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# first, read catalog of star particles at z = 0\n",
     "\n",
@@ -546,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,13 +593,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 43404.91796875,  44238.88671875,  46855.734375  ],\n",
+       "       [ 43406.32421875,  44237.12109375,  46849.92578125],\n",
+       "       [ 41799.5546875 ,  44130.66796875,  46263.68359375],\n",
+       "       [ 41799.5546875 ,  44130.66015625,  46263.56640625]], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# their positions at z = 0\n",
     "\n",
-    "part_at_z1['star']['position'][indices_at_z0]    "
+    "part_at_z0['star']['position'][indices_at_z0]"
    ]
   },
   {
@@ -586,7 +636,7 @@
    "source": [
     "# now you easily can get any property of interest at z = 1, for example, positions\n",
     "\n",
-    "part_at_z1['star']['position'][indices_at_z1]    "
+    "part_at_z1['star']['position'][indices_at_z1]"
    ]
   },
   {
@@ -604,14 +654,62 @@
    "source": [
     "# use the function within gizmo_track.py to read this file and assign values directly to the catalog at z = 0\n",
     "\n",
-    "gizmo.track.HostDistance.io_form_host_distance(part_at_z0)"
+    "gizmo.track.HostDistance.io_formation_coordinates(part_at_z0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# in utilities.simulation.Snapshot():\n",
+      "  read snapshot_times.txt\n",
+      "  input redshift = 0.000 -> snapshot index = 600\n",
+      "  reading snapshot index = 600, redshift = 0.000\n",
+      "\n",
+      "# in gizmo_analysis.gizmo_io.Read():\n",
+      "* read header from: output/snapdir_600/snapshot_600.0.hdf5\n",
+      "  snapshot contains the following number of particles:\n",
+      "  dark      (id = 1): 70514272 particles\n",
+      "  dark.2    (id = 2): 5513331 particles\n",
+      "  gas       (id = 0): 57060074 particles\n",
+      "  star      (id = 4): 13976485 particles\n",
+      "  blackhole (id = 5): 0 particles\n",
+      "\n",
+      "* read particles\n",
+      "  from: snapshot_600.0.hdf5\n",
+      "  from: snapshot_600.1.hdf5\n",
+      "  from: snapshot_600.2.hdf5\n",
+      "  from: snapshot_600.3.hdf5\n",
+      "\n",
+      "* read cosmological parameters from: initial_condition/ic_agora_m12i.conf\n",
+      "\n",
+      "* checking sanity of particle properties\n",
+      "\n",
+      "* assigning center of galaxy/halo:\n",
+      "  position = (41792.125, 44131.215, 46267.672) [kpc comoving]\n",
+      "  velocity = (-52.5, 71.9, 95.2) [km / s]\n",
+      "\n",
+      "* assigning principal axes of galaxy/halo:\n",
+      "  axis ratios: min/maj = 0.503, min/med = 0.509, med/maj = 0.988\n",
+      "\n",
+      "\n",
+      "# in utilities.basic.io.file_hdf5():\n",
+      "  read file: star_form_coordinates_600.hdf5\n",
+      "    center.position | float32, shape = (601, 3)\n",
+      "    center.velocity | float32, shape = (601, 3)\n",
+      "    form.host.distance | float32, shape = (13976485, 3)\n",
+      "    form.host.velocity | float32, shape = (13976485, 3)\n",
+      "    id | uint32, shape = (13976485,)\n",
+      "    principal.axes.vectors | float32, shape = (601, 3, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# alternately, read formation distances at the same time read snapshot itself\n",
     "# (as with principal axes)\n",
@@ -622,9 +720,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -1.22573435e+00,  -3.16812187e-01,   1.52569735e+00],\n",
+       "       [  1.93979454e+01,   7.89692259e+00,  -3.43014755e+01],\n",
+       "       [ -5.79297607e+02,  -8.96287460e+01,   1.60383392e+02],\n",
+       "       ..., \n",
+       "       [ -9.05316467e+01,  -3.17012157e+01,  -2.47149734e+01],\n",
+       "       [ -1.34268036e+01,  -5.74990749e+00,  -1.78105259e+00],\n",
+       "       [ -1.34432344e+01,  -5.75029564e+00,  -1.73416471e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3-D distance at formation, aligned with the principal axes of the host galaxy at that time [kpc physical]\n",
     "# principal axes defined according to all star particles within the host galaxy, independently at each snapshot\n",
@@ -637,9 +752,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   1.98256075,   40.18996048,  607.73504639, ...,   99.05441284,\n",
+       "         14.71436787,   14.72391891], dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# total scalar (absolute) distance wrt the host galaxy at formation [kpc physical]\n",
     "# this is a derived quantity, so need to call via .prop()\n",
@@ -649,9 +776,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1.26601529e+00,   1.52569735e+00,   3.39452457e+00],\n",
+       "       [  2.09437733e+01,  -3.43014755e+01,   3.86612892e-01],\n",
+       "       [  5.86190247e+02,   1.60383392e+02,   3.29509544e+00],\n",
+       "       ..., \n",
+       "       [  9.59215622e+01,  -2.47149734e+01,   3.47841668e+00],\n",
+       "       [  1.46061792e+01,  -1.78105259e+00,   3.54620552e+00],\n",
+       "       [  1.46214380e+01,  -1.73416471e+00,   3.54578733e+00]], dtype=float32)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3-D array of formation distance wrt the host galaxy in cylindrical coordinates [kpc physical]\n",
     "\n",
@@ -660,14 +804,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.26601529,  1.52569735,  3.39452457],\n",
+       "       [ 5.2021389 , -0.05428728,  3.83885074],\n",
+       "       [ 5.19000244,  0.58169037,  2.74372029],\n",
+       "       ..., \n",
+       "       [ 3.82861757, -5.66393709,  0.53575462],\n",
+       "       [ 7.15072107, -0.22851086,  4.99534464],\n",
+       "       [ 7.38440609,  0.08358712,  4.96902847]], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# these value look more reasonable is restrict to star particles that formed within the host galaxy\n",
     "\n",
     "# select particles formed at d = 0 - 8 kpc physical\n",
-    "part_indices = ut.array.get_indices(part_at_z0['star']['form.host.distance'], [0, 8])\n",
+    "part_indices = ut.array.get_indices(part_at_z0['star'].prop('form.host.distance.total'), [0, 8])\n",
     "\n",
     "part_at_z0['star'].prop('form.host.distance.cylindrical', part_indices)"
    ]
