updates to sync with utilities. minor improvements to documentation.

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read star and dark-matter particles at z = 0\n",
+    "# read star and dark matter particles at z = 0\n",
     "\n",
     "part = gizmo.io.Read.read_snapshots(['star', 'dark'], 'redshift', 0)"
    ]
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# this tutorial assumes that you are in the root directory of a simulation, \n",
-    "# but you can read a simulation at any location using input argument 'simulation_directory':\n",
+    "# but you can read a simulation at any location using input argument 'simulation_directory'\n",
     "\n",
     "part = gizmo.io.Read.read_snapshots('all', 'redshift', 0, simulation_directory='/arb/it/rary/loc/a/tion')"
    ]
@@ -107,9 +107,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# properties of dark matter particles are stored as dictionary\n",
+    "# properties of dark matter particles\n",
     "\n",
     "part['dark'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# properties of gas particles\n",
+    "\n",
+    "part['gas'].keys()"
    ]
   },
   {
@@ -125,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3-D position of star particles (particle.number x dimension.number array) [Mpc comoving]\n",
+    "# 3-D position of star particle (particle number x dimension number) [kpc comoving]\n",
     "\n",
     "part['star']['position']"
    ]
@@ -136,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3-D velocity of star particles (particle_number x dimension_number array) [km/s physical]\n",
+    "# 3-D velocity of star particle (particle number x dimension number) [km / s]\n",
     "\n",
     "part['star']['velocity']"
    ]
@@ -147,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mass of star particles [M_sun]\n",
+    "# mass of star particle [M_sun]\n",
     "\n",
     "part['star']['mass']"
    ]
@@ -158,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# formation scale-factor of star particles\n",
+    "# formation scale-factor of star particle\n",
     "\n",
     "part['star']['form.scalefactor']"
    ]
@@ -170,7 +181,7 @@
    "outputs": [],
    "source": [
     "# use .prop() to compute derived quantities,\n",
-    "# such as the age of the Universe [Gyr] when a star particle formed\n",
+    "# such as the time [Gyr] when a star particle formed\n",
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
     "\n",
     "part['star'].prop('form.time')"
@@ -191,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# metallicities"
+    "# elemental abundance / metallicity"
    ]
   },
   {
@@ -200,8 +211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 'metallicities' are stored in the catalog as *mass fractions*\n",
-    "# one value for each element, in a particle_number x element_number array\n",
+    "# elemental abundance is stored in the catalog as *linear mass fraction*\n",
+    "# one value for each element, in a array (particle_number x element number)\n",
     "# the first value is the mass fraction of all metals (everything not H, He)\n",
     "# then He, C, N, O, etc\n",
     "\n",
@@ -230,7 +241,7 @@
    "outputs": [],
    "source": [
     "# alternately use .prop() to compute derived quantities,\n",
-    "# including calling elements by their name or symbol\n",
+    "# including calling element by its name or symbol\n",
     "# see gizmo.io.ParticleDictionaryClass for all options for derived quantities\n",
     "\n",
     "print(part['star'].prop('massfraction.metals'))\n",
@@ -271,9 +282,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# refer to ut.basic.constants for assumed solar values (Asplund et al 2009) and other constants\n",
+    "# refer to utilities.basic.constant for assumed solar values (Asplund et al 2009) and other constants\n",
     "\n",
-    "ut.basic.constants.sun_composition"
+    "ut.constant.sun_composition"
    ]
   },
   {
@@ -334,7 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# position [kpc comoving] and velocity [km/s physical] of the center of the host galaxy\n",
+    "# position [kpc comoving] and velocity [km / s] of the center of the host galaxy\n",
     "# this was computed during read in, using ut.particle.get_center_position() and ut.particle.get_center_velocity()\n",
     "# functions in gizmo.analysis use these values in computing profiles\n",
     "\n",
@@ -366,7 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# can compute and assign principal axes (moment of inertia tensor) of stars during read in as below\n",
+    "# compute and assign principal axes (defined via moment of inertia tensor) of stars during read in as below\n",
     "\n",
     "part = gizmo.io.Read.read_snapshots(['star', 'dark'], 'redshift', 0, assign_principal_axes=True)"
    ]
@@ -377,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# moment of inertia tensor is stored similar to center_position\n",
+    "# principal axes rotation vectors are stored via\n",
     "\n",
     "print(part.principal_axes_vectors)"
    ]
@@ -388,8 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now can compute different types of distances of star particles from center of main galaxy\n",
-    "# compute 3-D distance from primary galaxy center along simulation's default x,y,z axes [kpc physical]\n",
+    "# now can compute different types of distance of star particle from center of host galaxy\n",
+    "# compute 3-D distance from host galaxy center along simulation's default x,y,z cartesian axes [kpc physical]\n",
     "\n",
     "part['star'].prop('host.distance')"
    ]
@@ -422,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute 3-D distances aligned with the principal axes in cylindrical coordinates\n",
+    "# compute 3-D distance aligned with the principal axes in cylindrical coordinates\n",
     "# first value is along the major axes (R, positive definite)\n",
     "# second value is vertical height wrt the disk (Z, signed)\n",
     "# third value is angle (phi, 0 to 2 * pi)\n",
@@ -437,7 +448,7 @@
    "outputs": [],
    "source": [
     "# same for velocity\n",
-    "# compute 3-D velocity from main galaxy center along simulation's default x,y,z axes [km / s]\n",
+    "# compute 3-D velocity from host galaxy center along simulation's default x,y,z cartesian axes [km / s]\n",
     "\n",
     "part['star'].prop('host.velocity')"
    ]
@@ -448,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute 1-D velocity [km / s]\n",
+    "# compute total (scalar) velocity [km / s]\n",
     "\n",
     "part['star'].prop('host.velocity.total')"
    ]
@@ -470,9 +481,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute 2-D velocity along the major axes (major + intermediate) and minor axis\n",
+    "# compute 3-D velocity in cylindrical coordinates\n",
     "# first value is along the major axes (positive definite)\n",
     "# second value is vertical velocity wrt the disk (signed)\n",
+    "# third value is azimuthal velocity in the plane of the disk (positive definite)\n",
     "\n",
     "part['star'].prop('host.velocity.principal.cylindrical')"
    ]
@@ -552,7 +564,7 @@
    "outputs": [],
    "source": [
     "# say that you want to find out what they were doing at z = 1\n",
-    "# then, read in catalog of star particles at z = 1 (snapshot 277)\n",
+    "# read in catalog of star particles at z = 1 (snapshot 277)\n",
     "\n",
     "part_at_z1 = gizmo.io.Read.read_snapshots(['star'], 'redshift', 1)"
    ]
@@ -643,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another useful file: star\\_form\\_host\\_distance\\_600.hdf5 stores, for each star particle at z = 0, its 3-D distance at the first snapshot after it formed (formation distance) wrt to the main host galaxy, in [kpc physical]. These distances are aligned with the major, intermediate, minor axes of the stellar disk (as defined via its moment of inertia tensor) at that snapshot."
+    "Another useful file: star\\_form\\_coordinates\\_600.hdf5 stores, for each star particle at z = 0, its 3-D distance and 3-D velocity wrt to the main host galaxy at the first snapshot after it formed. These coordinates are aligned with the principal (major, intermediate, minor) axes of the stellar disk (as defined via its moment of inertia tensor) at that snapshot."
    ]
   },
   {
@@ -659,60 +671,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "# in utilities.simulation.Snapshot():\n",
-      "  read snapshot_times.txt\n",
-      "  input redshift = 0.000 -> snapshot index = 600\n",
-      "  reading snapshot index = 600, redshift = 0.000\n",
-      "\n",
-      "# in gizmo_analysis.gizmo_io.Read():\n",
-      "* read header from: output/snapdir_600/snapshot_600.0.hdf5\n",
-      "  snapshot contains the following number of particles:\n",
-      "  dark      (id = 1): 70514272 particles\n",
-      "  dark.2    (id = 2): 5513331 particles\n",
-      "  gas       (id = 0): 57060074 particles\n",
-      "  star      (id = 4): 13976485 particles\n",
-      "  blackhole (id = 5): 0 particles\n",
-      "\n",
-      "* read particles\n",
-      "  from: snapshot_600.0.hdf5\n",
-      "  from: snapshot_600.1.hdf5\n",
-      "  from: snapshot_600.2.hdf5\n",
-      "  from: snapshot_600.3.hdf5\n",
-      "\n",
-      "* read cosmological parameters from: initial_condition/ic_agora_m12i.conf\n",
-      "\n",
-      "* checking sanity of particle properties\n",
-      "\n",
-      "* assigning center of galaxy/halo:\n",
-      "  position = (41792.125, 44131.215, 46267.672) [kpc comoving]\n",
-      "  velocity = (-52.5, 71.9, 95.2) [km / s]\n",
-      "\n",
-      "* assigning principal axes of galaxy/halo:\n",
-      "  axis ratios: min/maj = 0.503, min/med = 0.509, med/maj = 0.988\n",
-      "\n",
-      "\n",
-      "# in utilities.basic.io.file_hdf5():\n",
-      "  read file: star_form_coordinates_600.hdf5\n",
-      "    center.position | float32, shape = (601, 3)\n",
-      "    center.velocity | float32, shape = (601, 3)\n",
-      "    form.host.distance | float32, shape = (13976485, 3)\n",
-      "    form.host.velocity | float32, shape = (13976485, 3)\n",
-      "    id | uint32, shape = (13976485,)\n",
-      "    principal.axes.vectors | float32, shape = (601, 3, 3)\n"
+     "ename": "NameError",
+     "evalue": "name 'gizmo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ab7684f7f3b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# alternately, you can read the formation coordinates at the same time read snapshot itself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m part_at_z0 = gizmo.io.Read.read_snapshots(\n\u001b[0m\u001b[1;32m      4\u001b[0m     ['star'], 'redshift', 0, assign_principal_axes=True, assign_formation_coordinates=True)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gizmo' is not defined"
      ]
     }
    ],
    "source": [
-    "# alternately, read formation distances at the same time read snapshot itself\n",
-    "# (as with principal axes)\n",
+    "# alternately, you can read the formation coordinates at the same time read snapshot itself\n",
     "\n",
     "part_at_z0 = gizmo.io.Read.read_snapshots(\n",
     "    ['star'], 'redshift', 0, assign_principal_axes=True, assign_formation_coordinates=True)"
@@ -797,7 +772,7 @@
     }
    ],
    "source": [
-    "# 3-D array of formation distance wrt the host galaxy in cylindrical coordinates [kpc physical]\n",
+    "# 3-D distance at formation wrt the host galaxy in cylindrical coordinates [kpc physical]\n",
     "\n",
     "part_at_z0['star'].prop('form.host.distance.cylindrical')"
    ]
@@ -987,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
