improved a few variable/function names in particle tracking for clarity. improve notebook tutorial for using particle tracking.

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -609,7 +609,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# use this read class + function within gizmo_track.py to read star + gas index pointers associated with the catalog z = 1\n",
+    "# this function (within gizmo_track.py) reads star + gas pointer indices to the snapshot at z = 2\n",
+    "# you supply the particle catalog at z = 2, and it reads the pointers from z = 0 to z = 2\n",
+    "# it stores these pointers in part_at_z2.Pointer \n",
     "\n",
     "gizmo.track.ParticlePointerIO.io_pointers(part_at_z2)"
    ]
@@ -620,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alternately, can do the same during particle read-in by setting assign_pointers=True\n",
+    "# alternately, you can do the same during particle read-in by setting assign_pointers=True\n",
     "\n",
     "part_at_z2 = gizmo.io.Read.read_snapshots(['star', 'gas'], 'redshift', 2, assign_pointers=True)"
    ]
@@ -654,7 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the snapshot indices at this redshift (z) and at the reference redshift (z = 0)\n",
+    "# the snapshot indices at this redshift (z = 2) and at the reference redshift (z = 0)\n",
     "\n",
     "print(part_at_z2.Pointer['z.snapshot.index'])\n",
     "print(part_at_z2.Pointer['z0.snapshot.index'])"
@@ -666,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the number of particles at this redshift (z) and at the reference redshift (z = 0)\n",
+    "# the number of particles at this redshift (z = 2) and at the reference redshift (z = 0)\n",
     "\n",
     "print(part_at_z2.Pointer['z.star.number'])\n",
     "print(part_at_z2.Pointer['z.gas.number'])\n",
@@ -687,8 +689,9 @@
     "\n",
     "print(part_at_z2.Pointer['z0.to.z.index'])\n",
     "\n",
-    "# thus, also store the limits of the indices of each species at each snapshot, so can convert back to the index\n",
-    "# within the individual star list or the individual gas list (as stored in the particle catalog)\n",
+    "# this also stores the limits of the indices of each species at each snapshot, \n",
+    "# so you can convert back to the index within the individual star list or the individual gas list \n",
+    "# (as stored in the particle catalog)\n",
     "print(part_at_z2.Pointer['z.star.index.limits'])\n",
     "print(part_at_z2.Pointer['z.gas.index.limits'])\n",
     "\n",
@@ -702,8 +705,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# more simply, use this function to get pointers for a given species from z = 0 to z\n",
-    "# default mode of tracking is going backwards in time (from z = 0 to z)\n",
+    "# more simply, you can use this function to get pointers for a given species from z = 0 to z\n",
+    "# the default mode of tracking is going backward in time (from z = 0 to z)\n",
     "\n",
     "pointers = part_at_z2.Pointer.get_pointers(species_name_from='star', species_names_to='star')"
    ]
@@ -718,7 +721,7 @@
     "\n",
     "indices_at_z0 = np.array([5, 8, 13])\n",
     "\n",
-    "# their positions at z = 0\n",
+    "# get their positions at z = 0\n",
     "\n",
     "part_at_z0['star']['position'][indices_at_z0]"
    ]
@@ -729,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get their indices in the catalog at z = 2\n",
+    "# now you can get their indices in the catalog at z = 2\n",
     "# negative indices means that the star particle did not exist at z = 2\n",
     "\n",
     "indices_at_z2 = pointers[indices_at_z0]\n",
@@ -745,7 +748,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alternatively, can track particles forward in time by setting forward=True\n",
+    "# alternatively, you can track particles going forward in time by setting forward=True\n",
     "\n",
     "pointers = part_at_z2.Pointer.get_pointers(species_name_from='star', species_names_to='star', forward=True)\n",
     "\n",
@@ -761,7 +764,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# also, can track star particles back to progenitor star and gas particles\n",
+    "# also, you can track star particles back to both progenitor star and progenitor gas particles\n",
     "\n",
     "pointers = part_at_z2.Pointer.get_pointers(species_name_from='star', species_names_to=['star', 'gas'])\n",
     "\n",
@@ -787,11 +790,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# similar for working forward in time, to track gas particles at z that can be star or gas particles at z = 0\n",
+    "# similar for working forward in time, track gas particles at z that can be star or gas particles at z = 0\n",
     "\n",
     "pointers = part_at_z2.Pointer.get_pointers(species_name_from='gas', species_names_to=['star', 'gas'], forward=True)\n",
     "\n",
-    "# get star indices at z = 0 and see what they were at z = 2\n",
+    "# get gas indices at z = 2 and see what they end up as at z = 0\n",
     "gas_indices_at_z2 = np.array([0, 5, 8, 13])\n",
     "print(pointers['species'][gas_indices_at_z2])\n",
     "print(pointers['index'][gas_indices_at_z2])\n",
@@ -809,7 +812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### tracking between two snapshots both at z > 0"
+    "### tracking between 2 snapshots in which both are z > 0"
    ]
   },
   {
@@ -818,10 +821,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# particle tracking also can handle tracking particles between any two snapshots\n",
+    "# particle tracking also can handle tracking particles between any 2 snapshots\n",
     "\n",
     "# read catalogs of star and gas particles at z = 1 and 2, including their pointers relative to z = 0\n",
-    "# can set ssign_pointers=True, automatically appends pointer class to particle catalog\n",
+    "# set asign_pointers=True automatically to append pointer class to each particle catalog\n",
     "part_at_z1 = gizmo.io.Read.read_snapshots(['star', 'gas'], 'redshift', 1, assign_pointers=True)\n",
     "part_at_z2 = gizmo.io.Read.read_snapshots(['star', 'gas'], 'redshift', 2, assign_pointers=True)"
    ]
@@ -832,7 +835,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now just need to append intermediate redshift pointers (to z = 1) to pointers at z = 2\n",
+    "# now just need to append intermediate-redshift pointers (to z = 1) to pointers at z = 2\n",
     "\n",
     "part_at_z2.Pointer.add_intermediate_pointers(part_at_z1.Pointer)"
    ]
@@ -843,10 +846,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now access pointers from z = 1 to z = 2, by setting intermediate_z=True\n",
+    "# now access pointers from z = 1 to z = 2, by setting intermediate_snapshot=True\n",
     "\n",
     "pointers = part_at_z2.Pointer.get_pointers(\n",
-    "    species_name_from='star', species_names_to=['star', 'gas'], intermediate_z=True)\n",
+    "    species_name_from='star', species_names_to=['star', 'gas'], intermediate_snapshot=True)\n",
     "\n",
     "# get star indices at z = 0 and see what they were at z = 2\n",
     "star_indices_at_z1 = np.array([0, 5, 8, 13])\n",
@@ -868,10 +871,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you just want to track single species of particles (star -> star or gas -> gas) between two snapshots,\n",
-    "# read_pointers_between_snapshots() makes it easy to get the pointer indices between any two snapshots\n",
+    "# if you just want to track a single species (star -> star or gas -> gas) between 2 snapshots,\n",
+    "# read_pointers_between_snapshots() makes it easy to get the pointer indices between any 2 snapshots\n",
     "\n",
-    "# tracking forwards in time\n",
+    "# tracking forward in time\n",
     "pointers_z2_to_z1 = gizmo.track.ParticlePointerIO.read_pointers_between_snapshots(\n",
     "    snapshot_index_from=172, snapshot_index_to=277, species_name='star')\n",
     "\n",
@@ -879,7 +882,7 @@
     "print(part_at_z2['star']['position'] - part_at_z1['star']['position'][pointers_z2_to_z1])\n",
     "\n",
     "\n",
-    "# tracking backwards in time\n",
+    "# similar for tracking going backward in time\n",
     "pointers_z1_to_z2 = gizmo.track.ParticlePointerIO.read_pointers_between_snapshots(\n",
     "    snapshot_index_from=277, snapshot_index_to=172, species_name='star')\n",
     "\n",
@@ -898,20 +901,20 @@
    "source": [
     "# do the same, but for gas\n",
     "\n",
-    "# tracking forwards in time\n",
+    "# tracking going forward in time\n",
     "pointers_z2_to_z1 = gizmo.track.ParticlePointerIO.read_pointers_between_snapshots(\n",
     "    snapshot_index_from=172, snapshot_index_to=277, species_name='gas')\n",
     "\n",
-    "# ensure still gas particle at z = 1\n",
+    "# ensure that gas particle still is a gas particle at z = 1\n",
     "masks = (pointers_z2_to_z1 >= 0)\n",
     "\n",
     "print(part_at_z2['gas']['position'][masks] - part_at_z1['gas']['position'][pointers_z2_to_z1[masks]])\n",
     "\n",
-    "# tracking backwards in time\n",
+    "# tracking going backward in time\n",
     "pointers_z1_to_z2 = gizmo.track.ParticlePointerIO.read_pointers_between_snapshots(\n",
     "    snapshot_index_from=277, snapshot_index_to=172, species_name='gas')\n",
     "\n",
-    "# for gas, still have to ensure positive pointers, even if tracking backwards in time,\n",
+    "# for gas, still have to ensure positive pointers, even if tracking going backward in time,\n",
     "# because a few gas particles that leave the zoom-in region get culled (for numerical stability) by z = 0\n",
     "# (remember that the pointers always route through z = 0)\n",
     "masks = (pointers_z1_to_z2 >= 0)\n",
@@ -953,6 +956,7 @@
    "outputs": [],
    "source": [
     "# more conveniently, you can read the formation coordinates of star particles during snapshot read-in\n",
+    "# by setting assign_formation_coordinates=True\n",
     "\n",
     "part_at_z0 = gizmo.io.Read.read_snapshots(\n",
     "    ['star'], 'redshift', 0, assign_host_principal_axes=True, assign_formation_coordinates=True)"
@@ -1032,7 +1036,7 @@
    "source": [
     "# recall that formation postion + velocity as stored relative to each host's principal axes\n",
     "# and that principal axes are computed independently at each snapshot\n",
-    "# the tracking code also stores each host's rotation tensor (for its principal axes) at each snapshot\n",
+    "# the tracking code also stores the host's rotation tensor (for its principal axes) at each snapshot\n",
     "# so you can use this to compute formation coordinates in the box's x,y,z coordinates if you want\n",
     "\n",
     "part_at_z0['star'].host_rotation_tensors_at_snapshots"
@@ -1199,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
