Throughout, changed input string variable: *_scaliing = 'log' or 'linear' to a boolean flag *_log_scale = True or False where False means using linear scaling. This simplies and safeguards the code, given that this is intrinsically a boolean option.
Also improved doc strings throughout for clarity.

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -1599,12 +1599,12 @@
    "source": [
     "# first, initiate an instance of SpeciesProfileClass\n",
     "# as you initialize, choose your distance/radius binning scheme:\n",
-    "#   'log' v 'linear', distance limits, bin width, number of spatial dimensions of profile\n",
+    "#   distance limits, bin width, whether to use log scaling, number of spatial dimensions of profile\n",
     "# refer to ut.binning.DistanceBinClass() for more\n",
     "\n",
     "# linear binning from 0 to 20 kpc with 1 kpc bin width, assuming a 3-D profile\n",
     "SpeciesProfile = ut.particle.SpeciesProfileClass(\n",
-    "    scaling='linear', limits=[0, 20], width=1, dimension_number=3)"
+    "    limits=[0, 20], width=1, log_scale=True, dimension_number=3)"
    ]
   },
   {
@@ -1678,7 +1678,7 @@
     "\n",
     "# log binning from 0.1 to 10 kpc with 0.1 dex bin width, assuming a 2-D profile (along R)\n",
     "SpeciesProfile = ut.particle.SpeciesProfileClass(\n",
-    "    scaling='log', limits=[0.1, 10], width=0.1, dimension_number=2)"
+    "    limits=[0.1, 10], width=0.1, log_scale=True, dimension_number=2)"
    ]
   },
   {
@@ -1717,7 +1717,7 @@
     "\n",
     "# log binning from 0.1 to 10 kpc with 0.1 dex bin width, assuming a 1-D profile (along Z)\n",
     "SpeciesProfile = ut.particle.SpeciesProfileClass(\n",
-    "    scaling='log', limits=[0.1, 10], width=0.1, dimension_number=1)\n",
+    "    limits=[0.1, 10], width=0.1, log_scale=True, dimension_number=1)\n",
     "\n",
     "# limit the R axex to [5, 8] kpc \n",
     "pro = SpeciesProfile.get_sum_profiles(\n",
