couple more comments

--- a/gizmo_tutorial_agetracers.ipynb
+++ b/gizmo_tutorial_agetracers.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "     (4) GIZMO_config.h and gizmo.out files (or just gizmo.out) must either be in the work directory or a 'gizmo/' sub-directory to check certain compile-time options and run-time parameters\n",
     "\n",
-    "     (5) If custom-defined age tracer bin spacings were used, then 'age-bins.txt' must be in the work directory.\n",
+    "     (5) If custom-defined age tracer bin spacings were used, then 'age-bins.txt' must be in the work directory. Otherwise, logbin age tracers are assumed to have been used based on the parameters `AgeTracerBinStart` and `AgeTracerBinEnd`, which represent the far left / far right \n",
     "\n",
     "\n",
     "\n",
