removed part['star']['metallicity.total'] as an alias for part['star']['metallicity.metals'] for simplicity. now just call the latter for the total metal mass.

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -287,7 +287,7 @@
     "#   log10((mass_iron / mass_hydrogen)_particle / (mass_iron / mass_hydrogen)_sun)\n",
     "# GizmoAnalysis assumes solar abundances from Asplund et al 2009\n",
     "\n",
-    "print(part['star'].prop('metallicity.total'))\n",
+    "print(part['star'].prop('metallicity.metals'))\n",
     "print(part['star'].prop('metallicity.fe'))"
    ]
   },
