fixed minor bug (should not affect other users)

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -1802,7 +1802,7 @@
     "# this returns a bunch of useful statistics via a dictionary\n",
     "\n",
     "pro = SpeciesProfile.get_statistics_profiles(\n",
-    "    part, 'star', 'age', weight_by_mass=True, rotation=True, other_axis_distance_limits=[5, 8])"
+    "    part, 'star', 'age', weight_property='mass', rotation=True, other_axis_distance_limits=[5, 8])"
    ]
   },
   {
