renamed some methods in particle tracking for clarity

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -1312,7 +1312,7 @@
    "source": [
     "# use the function within gizmo_track.py to read this file and assign values directly to the catalog at z = 0\n",
     "\n",
-    "gizmo.track.ParticleCoordinate.io_hosts(part_at_z0, simulation_directory, assign_formation_coordinates=True)"
+    "gizmo.track.ParticleCoordinate.io_hosts_coordinates(part_at_z0, simulation_directory, assign_formation_coordinates=True)"
    ]
   },
   {
