--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +100,12 @@
     "#simulation_directory = '.'\n",
     "\n",
     "# use this to point to a specific simulation directory, if you run this notebook from somwhere else\n",
-    "simulation_directory = '/Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res57000'"
+    "simulation_directory = '/Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res7100'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,34 +114,37 @@
      "text": [
       "\n",
       "# in utilities.simulation.Snapshot():\n",
-      "* reading:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res57000/snapshot_times.txt\n",
+      "* reading:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res7100/snapshot_times.txt\n",
       "\n",
       "* input redshift = 0:  using snapshot index = 600, redshift = 0.000\n",
       "\n",
       "\n",
       "# in gizmo_analysis.gizmo_io.Read():\n",
-      "* reading header from:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res57000/output/snapshot_600.hdf5\n",
+      "* reading header from:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res7100/output/snapdir_600/snapshot_600.0.hdf5\n",
       "  snapshot contains the following number of particles:\n",
-      "    dark      (id = 1): 8820344 particles\n",
-      "    dark2     (id = 2): 3081337 particles\n",
-      "    gas       (id = 0): 5969934 particles\n",
-      "    star      (id = 4): 3059250 particles\n",
+      "    dark      (id = 1): 70514272 particles\n",
+      "    dark2     (id = 2): 5513331 particles\n",
+      "    gas       (id = 0): 57060074 particles\n",
+      "    star      (id = 4): 13976485 particles\n",
       "    blackhole (id = 5): 0 particles\n",
       "\n",
       "* reading species: ['star', 'dark']\n",
       "* reading particles from:\n",
-      "    Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res57000/output/snapshot_600.hdf5\n",
+      "    snapshot_600.0.hdf5\n",
+      "    snapshot_600.1.hdf5\n",
+      "    snapshot_600.2.hdf5\n",
+      "    snapshot_600.3.hdf5\n",
       "\n",
-      "* reading cosmological parameters from:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res57000/initial_condition/ic_agora_m12i.conf\n",
+      "* reading cosmological parameters from:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res7100/initial_condition/ic_agora_m12i.conf\n",
       "\n",
       "* checking sanity of particle properties\n",
       "\n",
       "\n",
       "# in gizmo_analysis.gizmo_track.ParticleCoordinate():\n",
-      "  read 1 host (position, velocity, principal axes) from:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res57000/track/host_coordinates.hdf5\n",
-      "  host1 position = (41821.97, 44122.00, 46288.45) [kpc comoving]\n",
-      "  host1 velocity = (-48.7, 73.1, 96.7) [km / s]\n",
-      "  host1 axis ratios = (0.15, 0.15, 0.97)\n",
+      "  read 1 host (position, velocity, principal axes) from:  Users/awetzel/work/research/simulation/gizmo/simulations/m12/m12i/m12i_res7100/track/host_coordinates.hdf5\n",
+      "  host1 position = (41792.15, 44131.23, 46267.68) [kpc comoving]\n",
+      "  host1 velocity = (-52.2, 73.6, 94.7) [km / s]\n",
+      "  host1 axis ratios = (0.16, 0.16, 0.99)\n",
       "\n"
      ]
     }
@@ -2734,6 +2737,133 @@
    ]
   },
   {
+   "source": [
+    "scratch space"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distances = part['star'].prop('host.distance.principal.cylindrical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks = (distances[:, 0] < 10) * (distances[:, 0] > 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks *= (distances[:, 2] < 3) * (distances[:, 2] > -3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velocities = part['star'].prop('host.velocity.principal.cylindrical')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0.11225732, -1.6793771 , -0.21120499, ..., -0.43260193,\n",
+       "        0.19732301, -0.19561456], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "part['star'].prop('metallicity.iron')[masks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0.59348047, -1.0845962 ,  0.25789762, ...,  0.06642766,\n",
+       "        0.65832883,  0.267834  ], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "part['star'].prop('metallicity.o')[masks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 2.6579257 , 11.80348814,  4.89058245, ...,  8.22609781,\n",
+       "        1.90892678,  5.17607961])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "part['star'].prop('age')[masks]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0.2213335 , 3.2861714 , 0.4752283 , ..., 1.1075187 , 0.15197301,\n",
+       "       0.51442003], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "part['star'].prop('form.redshift')[masks]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2744,8 +2874,8 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "name": "python394jvsc74a57bd0563616ea0795551886fedfb6f43611ed89f67b819df42e5edfc6c6ce5ab0ec12",
-   "display_name": "Python 3.9.4 64-bit ('base': conda)"
+   "name": "python395jvsc74a57bd0563616ea0795551886fedfb6f43611ed89f67b819df42e5edfc6c6ce5ab0ec12",
+   "display_name": "Python 3.9.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2757,7 +2887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
