tweaks for FIRE-3 sync with changes to utilities

--- a/gizmo_tutorial.ipynb
+++ b/gizmo_tutorial.ipynb
@@ -2530,13 +2530,13 @@
     "ax.set_xlim(metallicity_limits[0], metallicity_limits[1])\n",
     "ax.set_xlabel('[Fe/H]')\n",
     "\n",
-    "#ut.statistic.print_statistics(metallicity_sim)\n",
+    "#ut.math.print_statistics(metallicity_sim)\n",
     "\n",
-    "#ut.statistic.print_statistics(metallicity_agetracer)\n",
+    "#ut.math.print_statistics(metallicity_agetracer)\n",
     "\n",
     "difs = metallicity_agetracer - metallicity_sim\n",
     "\n",
-    "ut.statistic.print_statistics(difs)"
+    "ut.math.print_statistics(difs)"
    ]
   },
   {
@@ -2649,7 +2649,7 @@
     "\n",
     "difs = alpha_agetracer[masks] - alpha_sim[masks]\n",
     "\n",
-    "ut.statistic.print_statistics(difs)"
+    "ut.math.print_statistics(difs)"
    ]
   },
   {
